--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="img/logo.jpg" alt="" class="logo"></a>
+                <a class="navbar-brand" href="#"><img src="img/Logo.jpg" alt="" class="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
